--- a/portfolio/style/styles.css
+++ b/portfolio/style/styles.css
@@ -58,6 +58,7 @@ a:hover {
 	color: rgb(255, 0, 0);
 	background-color: rgb(75, 6, 6);
 	font-size: larger;
+	transition: 1s;
 }
 
 .menu>li {
@@ -79,6 +80,10 @@ a:hover {
 	font-size: 70px;
 	margin-top: 250px;
 	text-align: center;
+}
+
+.MOI:hover {
+	text-shadow: 4px 2px 2px rgb(255, 0, 0);
 }
 
 .Nom {
@@ -190,6 +195,11 @@ a:hover {
 	width: 70%;
 }
 
+.form-status:hover {
+	background-color: rgb(39, 2, 2);
+	transition: 1s;
+}
+
 .form-control {
 	display: flex;
 	align-self: center;
@@ -201,6 +211,11 @@ a:hover {
 	background-color: black;
 	color: red;
 	width: 100%;
+}
+
+.form-control:hover {
+	background-color: rgb(39, 2, 2);
+	transition: 1s;
 }
 
 .btn-btn-default{
@@ -243,7 +258,10 @@ a:hover {
 
 .btn-btn-default:hover{
 	color: red;
-	background-color: rgb(51, 8, 8);
+	background-color: black;
+	box-shadow: 2px 2px 2px red;
+	transition: 1s;
+	font-size: larger;
 }
 
 .container {
@@ -253,9 +271,19 @@ a:hover {
 	border-radius: 15px;
 }
 
+.container:hover {
+	transition: 1s;
+	background-color: rgb(45, 1, 1);
+}
+
 .cv img {
 	margin: auto;
 	width: 50px;
+}
+
+.cv img:hover {
+	width: 60px;
+	transition: 1s;
 }
 
 .box>.cv {
@@ -498,6 +526,12 @@ a:hover {
 	border-color:rgb(202, 4, 4);
 	border-width: 5px;
 	margin-top: 15px;
+}
+
+.skill:hover {
+	background-color: red;
+	border-color: black;
+	transition: 1s;
 }
 
 .nom_skill {
