--- a/portfolio/style/styles.css
+++ b/portfolio/style/styles.css
@@ -44,6 +44,12 @@ footer {
     margin-right: auto;
 }
 
+.menu:hover {
+	box-shadow: 4px 4px 4px rgb(241, 23, 23);
+	background-color: rgb(16, 2, 2);
+	transition: 1s;
+}
+
 .menu a {
 	border: 2.5px solid red;
 	border-radius: 4px;
@@ -76,6 +82,11 @@ a:hover {
 	width: 10px;
 }
 
+.menu>.ver:hover {
+	border-left: 3px solid red; 
+	transition: 1s;
+}
+
 .MOI {
 	font-size: 70px;
 	margin-top: 250px;
@@ -84,12 +95,18 @@ a:hover {
 
 .MOI:hover {
 	text-shadow: 4px 2px 2px rgb(255, 0, 0);
+	transition: 0.5s;
 }
 
 .Nom {
 	font-size: 70px;
 	margin-top: 50px;
 	text-align: center;
+}
+
+.Nom:hover {
+	text-shadow: 4px 2px 2px rgb(255, 0, 0);
+	transition: 0.5s;
 }
 
 .menu .icn {
